# PdfVerifier-FE

./: .gitignore  Cargo.toml  README.md  cargo_errors.txt  check_error.txt  check_lengths.rs  check_output.txt  check_result.txt  compile_errors.txt  compile_errors_utf8.txt  compile_output.txt  conv_lens.txt  error.txt  index.html  main.js  orig_lens.txt  out.txt  out_utf8.txt  output.txt  package-lock.json  package.json  package_command.md  run_debug.txt  run_debug_utf8.txt  run_error.txt  run_error2.txt  stderr.txt  stderr_utf8.txt  style.css  vite.config.js
assets/src/lib/: icons.js
keys/: dev_public_key.pem
src/: ber_util.rs  client.rs  hashing.rs  lib.rs  main.rs  parser.rs
src/lib/: PdfVerifier.js  icons.js  index.js
