[package]
name = "pdfverifier-fe"
version = "0.1.0"
edition = "2021"

[dependencies]
lopdf = "0.33.0" # Make sure to check latest compatible version
hex = "0.4.3"
reqwest = { version = "0.11", features = ["json"] }
base64 = "0.21"
cms = "0.2.2"
der = "0.7.8"
sha2 = "0.10"
sha3 = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
asn1-rs = "0.6"
rasn = "0.12"
der-parser = "9"
simple_asn1 = "0.6"
