[package]
name = "pdfverifier-fe"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
lopdf = "0.33.0" # Make sure to check latest compatible version
hex = "0.4.3"
base64 = "0.21"
cms = "0.2.2"
der = "0.7.8"
sha2 = "0.10"
sha3 = "0.10"
md-5 = "0.10"
sha-1 = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
asn1-rs = "0.6"
rasn = "0.12"
der-parser = "9"
simple_asn1 = "0.6"
x509-parser = "0.16"

wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["console"] }
console_error_panic_hook = "0.1"
p256 = { version = "0.13", features = ["ecdsa", "pem", "sha2"] }
getrandom = { version = "0.2", features = ["js"] }

[features]
dev = []
prod = []
